src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account.AccountNumber</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Community_Program__c</fullName>
        <label>Affiliate Community Program</label>
        <picklist>
            <picklistValues>
                <fullName>Mass Energy Solar Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUNY/Pepsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Pacific Gas &amp; Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Long Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D SCE - 10B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temple Sinai Solar Co-Op VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize VCCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucester Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE Houston Employee Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize SecondChance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Sagewell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE Delmarva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D NSTAR MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D National Grid MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D JCP&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D PSEG NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Atlantic City Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D United Illuminating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Connecticut L&amp;P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwalk CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D ConEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D PEPCO MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D BG&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Delmarva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit Baltimore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affordability__c</fullName>
        <description>Can the customer afford a solar installation?</description>
        <inlineHelpText>Can the customer afford a solar installation?</inlineHelpText>
        <label>Affordability</label>
        <picklist>
            <picklistValues>
                <fullName>Probably</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May Not Be Able</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can Clearly Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probably Can’t Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Sales_Orders_Cancelled__c</fullName>
        <description>True when there is at least one child Sales Order record and all child Sales Order records are in status code &quot;Canceled&quot;</description>
        <formula>Number_of_Sales_Orders__c &gt; 0 
&amp;&amp; 
Number_of_Sales_Orders__c = Number_of_Sales_Orders_Cancelled__c</formula>
        <inlineHelpText>True when there is at least one child Sales Order record and all child Sales Order records are in status code &quot;Canceled&quot;</inlineHelpText>
        <label>All Sales Orders Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sales Tax Rate That Applies For This System</description>
        <inlineHelpText>Sales Tax Rate That Applies For This System</inlineHelpText>
        <label>Applicable Tax Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Approved_System_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved System Design</label>
        <referenceTo>System_Design__c</referenceTo>
        <relationshipLabel>Opportunities (Approved System Design)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Astrum_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrum Contract</label>
        <referenceTo>Astrum_Contract__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEG_Total_System_Price__c</fullName>
        <description>Total Purchase Price to CEG for Leased System</description>
        <inlineHelpText>Total Purchase Price to CEG for Leased System</inlineHelpText>
        <label>CEG Total System Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculator_Average_Monthly_Bill__c</fullName>
        <description>Average Monthly Electric Bill Estimated by Customer on Website Calculator</description>
        <inlineHelpText>Average Monthly Electric Bill Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator Average Monthly Bill ($)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_Home_Appreciation_Rate__c</fullName>
        <description>Home Appreciation Rate Estimated by Customer on Website Calculator</description>
        <inlineHelpText>Home Appreciation Rate Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator Home Appreciation Rate (%)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_Menu_Choice__c</fullName>
        <label>Calculator Menu Choice</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead (Questions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead (Gathering Info)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead (Financing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing (Short-Term)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing (Long-Term)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing (Lease)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified (Site)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Qualified (Curious)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculator_Quote_URL__c</fullName>
        <description>Link to Website Calculator Quote That Generated This Lead</description>
        <inlineHelpText>Link to Website Calculator Quote That Generated This Lead</inlineHelpText>
        <label>Calculator Quote URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Calculator_Rate_Increase__c</fullName>
        <description>Rate Increase Estimated by Customer on Website Calculator</description>
        <inlineHelpText>Rate Increase Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator Rate Increase (%)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_Site_Quality__c</fullName>
        <description>Site Quality Estimated by Customer on Website Calculator</description>
        <inlineHelpText>Site Quality Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator Site Quality</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculator_System_Size_W__c</fullName>
        <description>System Size Estimated by Customer on Website Calculator</description>
        <inlineHelpText>System Size Estimated by Customer on Website Calculator</inlineHelpText>
        <label>Calculator System Size (W)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cannot_Afford_Borrow_Count__c</fullName>
        <formula>IF(ISPICKVAL( Closed_Reason__c , &quot;Cannot Afford/Borrow&quot; ), 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cannot Afford/Borrow Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>CASE(StageName, 
&quot;Qualified&quot;, &quot;Active&quot;,
&quot;Assigned to Field Sales&quot;,&quot;Active&quot;,
&quot;Sales Visit Scheduled&quot;,&quot;Active&quot;,
&quot;Sales Process Ongoing&quot;,&quot;Active&quot;,
&quot;On Hold&quot;,&quot;Passive&quot;,
&quot;Unresponsive&quot;,&quot;Passive&quot;,
&quot;Closed - Won&quot;,&quot;Closed&quot;,
&quot;Closed - Lost&quot;,&quot;Closed&quot;,
&quot;Contract Cancelled&quot;,&quot;Closed&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closability__c</fullName>
        <description>How likely can we close this deal?</description>
        <inlineHelpText>How likely can we close this deal?</inlineHelpText>
        <label>Closability</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Count__c</fullName>
        <formula>IF( ISPICKVAL( StageName , &quot;Closed - Lost&quot;), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Lost Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Reason_Detail__c</fullName>
        <description>Detailed notes about why the opportunity is closed.</description>
        <inlineHelpText>Detailed notes about why the opportunity is closed.</inlineHelpText>
        <label>Closed Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Reason__c</fullName>
        <description>The reason for closing this opportunity.</description>
        <inlineHelpText>The reason for closing this opportunity.</inlineHelpText>
        <label>Closed Reason</label>
        <picklist>
            <controllingField>Closed_Type__c</controllingField>
            <picklistValues>
                <fullName>Site Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Afford/Borrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI - Not Worth It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA - Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof/Installation Problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse Veto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown/Unspecified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering - Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offering - Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeliness/Responsiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship with Rep/Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSRF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Savings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Scenario__c</fullName>
        <label>Closed Scenario</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Type__c</fullName>
        <description>Closed type for the opportunity.</description>
        <inlineHelpText>Closed type for the opportunity.</inlineHelpText>
        <label>Closed Type</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Not Going Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2D Disqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commercial_System_Size_kW__c</fullName>
        <description>Approximate System Size of the Commercial project.</description>
        <inlineHelpText>Enter the approximate System Size of the Commercial project.</inlineHelpText>
        <label>Commercial System Size (kW)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Program__c</fullName>
        <label>Community Program</label>
        <picklist>
            <picklistValues>
                <fullName>Belmont Goes Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concord Solar Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPN College Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Solarize Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUNY/Pepsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairfield Energy Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucester Solar Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass Energy Solar Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newtown Energy Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pikesville Solar Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Andover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Aquidneck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Avon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Bridgeport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Cheshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Frederick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Glastonbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Goshen Warwick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Huntington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Lexington-Bedford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Needham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Newtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Northern Dutchess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Plainfield Ashfield Buckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize RetroFit Baltimore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Saugerties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize SecondChance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize SOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Somers-New Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarize Stamford</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Quote_Mentioned__c</fullName>
        <description>Did the customer mention a competitive quote?</description>
        <inlineHelpText>Did the customer mention a competitive quote?</inlineHelpText>
        <label>Competitive Quote Mentioned</label>
        <picklist>
            <picklistValues>
                <fullName>Mentioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Mention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Quote__c</fullName>
        <description>Does the customer have a competitive quote?</description>
        <inlineHelpText>Does the customer have a competitive quote?</inlineHelpText>
        <label>Competitive Quote</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Who provided a competitive quote?</description>
        <inlineHelpText>Who provided a competitive quote?</inlineHelpText>
        <label>Competitors</label>
        <picklist>
            <controllingField>Competitive_Quote_Mentioned__c</controllingField>
            <picklistValues>
                <fullName>1BOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sungevity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verrango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Local Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Remote Solar Sales Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alteris/Real Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenspring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Liberty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunRun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Detail_Not_Null__c</fullName>
        <description>Is Contact Detail Not Blank?</description>
        <formula>IF(NOT(ISBLANK(Contact_Detail__c)),&apos;TRUE&apos;,&apos;FALSE&apos;)</formula>
        <inlineHelpText>Is Contact Detail Not Blank?</inlineHelpText>
        <label>Contact Detail Not Null</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Detail__c</fullName>
        <description>Contact Detail</description>
        <inlineHelpText>Contact Detail</inlineHelpText>
        <label>Contact Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Count__c</fullName>
        <label>Contact Role Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <picklist>
            <picklistValues>
                <fullName>CONNECTICUT =&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fairfield CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hartford CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litchfield CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middlesex CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Haven CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New London CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tolland CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windham CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISTRICT OF COLUMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE =&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Castle DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sussex DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MARYLAND =&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allegany MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anne Arundel MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore City MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calvert MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caroline MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carroll MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cecil MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dorchester MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frederick MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garrett MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harford MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Howard MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent MD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Range__c</fullName>
        <description>What Credit Score Range Does the Customer Believe They Have?</description>
        <inlineHelpText>What Credit Score Range Does the Customer Believe They Have?</inlineHelpText>
        <label>Credit Score Range</label>
        <picklist>
            <picklistValues>
                <fullName>Above 700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close (680-700)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor (&lt; 680)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 720</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700-720</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>680-700</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 680</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know/not good</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Opportunity_Name__c</fullName>
        <formula>IF(Property__r.Name != null ,  TEXT(Property__r.Property_State__c)+ &apos;-&apos; +  TRIM(LEFT(Account.Name, 5))  + &apos;-&apos; +  TRIM(LEFT(Property__r.Name, 10)) + &apos;-&apos; +  (RIGHT(TEXT(YEAR(TODAY())),2)+  CASE(MONTH(Today()),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;)      )  ,  TRIM(LEFT(Account.Name, 5))  + &apos;-&apos; +  (RIGHT(TEXT(YEAR(TODAY())),2)+  CASE(MONTH(Today()),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;,
7, &quot;Jul&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;)    )      )</formula>
        <label>Custom Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Has_Constant_On_Internet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the Customer Have Constant On Internet Connection (Comcast, FIOS, DSL, etc)?</description>
        <inlineHelpText>Does the Customer Have Constant On Internet Connection (Comcast, FIOS, DSL, etc)?</inlineHelpText>
        <label>Customer Has Constant On Internet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_s_Economic_Level__c</fullName>
        <inlineHelpText>Pick one from each category.</inlineHelpText>
        <label>Customer&apos;s Economic Level</label>
        <picklist>
            <picklistValues>
                <fullName>Very Expensive House (&gt;$1 million)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expensive House ($500k-$1 million)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decent House ($200k-500k)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nice Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decent Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inexpensive Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nice Interior/Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decent Interior/Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Nice Interior/Exterior</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_s_Timeframe__c</fullName>
        <label>Customer&apos;s Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Few Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Few Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Later this Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>D2D_Rep_ID__c</fullName>
        <description>D2D  Vendor Rep ID</description>
        <inlineHelpText>D2D  Vendor Rep ID</inlineHelpText>
        <label>D2D Rep ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Opp_Cancelled__c</fullName>
        <description>opp cancellation metrics for the CWR will be based off this field</description>
        <inlineHelpText>opp cancellation metrics for the CWR will be based off this field</inlineHelpText>
        <label>Date Opp Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Site_Survey_Completed__c</fullName>
        <description>The date the site survey was completed.</description>
        <inlineHelpText>The date the site survey was completed.</inlineHelpText>
        <label>Date Site Survey Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Site_Survey_Requested__c</fullName>
        <description>The date the site survey was requested.</description>
        <inlineHelpText>The date the site survey was requested.</inlineHelpText>
        <label>Date Site Survey Requested</label>
        <type>DateTime</type>
    </fields>
</CustomObject>